# polymarket-sniper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: polymarket_orderbook.md
ops/: check_observer.sh  stop_observer.sh
scripts/: backfill_unknowns.py  backtest_edge4.py  quant_edge_analysis.py  run_analysis.py  stress_test_edge4.py
src/: analysis.py  binance_price_feed.py  bonereaper_tracker.py  bonereaper_trader.py  config.py  executor.py  live_executor.py  orderbook_observer.py  paper_trader.py  position_mgr.py  price_feed.py  realistic_executor.py  redeemer.py  safety.py  scanner.py  signal.py
src/scripts/: binance_logger.py  bonereaper_live_tracker.py
tests/: test_analysis.py  test_binance_price_feed.py  test_bonereaper_tracker.py  test_config.py  test_live_executor.py  test_orderbook_observer.py  test_paper_trader.py  test_realistic_executor.py  test_redeemer.py  test_safety.py  test_scanner.py
