[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-sniper"
version = "0.1.0"
description = "Polymarket sniper bot for BTC/ETH 5-minute up/down markets"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
